Get all products for users, Product Details Card
